--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -23,7 +26,7 @@ jobs:
       - name: Upload site files
         uses: actions/upload-pages-artifact@v3
         with:
-          path: . # uploads everything in the repo root
+          path: . # uploads everything in the root folder
 
       - name: Deploy to GitHub Pages
         id: deployment
